// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1 children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow-y: auto;"
  >
    <div
      style="position: relative; height: 100%; width: 50px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render 5 children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow-y: auto;"
  >
    <div
      style="position: relative; height: 100%; width: 230px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render component 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow-y: auto;"
  >
    <div
      style="position: relative; height: 100%; width: 150px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 50px;"
      >
        <div>
          component
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render fragments 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow-y: auto;"
  >
    <div
      style="position: relative; height: 100%; width: 100px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
        <div>
          fragment
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 50px;"
      >
        <div>
          fragment
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render many children 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow-y: auto;"
  >
    <div
      style="position: relative; height: 100%; width: 40030px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render non elements 1`] = `
<DocumentFragment>
  <div
    style="width: 100%; height: 100%; overflow-y: auto;"
  >
    <div
      style="position: relative; height: 100%; width: 100px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        string
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 50px;"
      >
        123
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should render with given width / height 1`] = `
<DocumentFragment>
  <div
    style="width: 100px; height: 800px; overflow-y: auto;"
  >
    <div
      style="position: relative; height: 100%; width: 230px;"
    >
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 0px;"
      >
        <div>
          0
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 50px;"
      >
        <div>
          1
        </div>
      </div>
      <div
        style="margin: 0px; padding: 0px; position: absolute; display: flex; height: 100%; left: 100px;"
      >
        <div>
          2
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
